--- a/sc/public/index.html
+++ b/sc/public/index.html
@@ -2,15 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/my-logo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
+    <meta name="description" content="Scrabble club information."/>
+    <meta property="og:title" content="Scrabble Club Site"/>
+    <meta property="og:description" content="Scrabble club info."/>
+    <meta property="og:image" content="%PUBLIC_URL%//my-logo.png"/>
+    <meta property="og:image:width" content="400"/>
+    <meta property="og:image:height" content="400"/>
+    <meta property="og:url" content="https://tilerunner.github.io/scrabble-club"/>
+    <meat property="og:site_name" content="Scrabble Club"/>
+    <meta property="og:locale" content="en_US"/>
+    <meta property="og:type" content="website"/>
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%//my-logo.png"/>
+<!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
@@ -26,7 +31,7 @@
     -->
     <!-- Add bootstrap 5 for css classes like container, row, col -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
-    <title>React App</title>
+    <title>Scrabble Club</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
